--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -54,8 +54,7 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
-          hugo \
-            --minify \           
+          hugo --minify           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
