--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # relativeURLs = true
 # Change the default theme to be use when building the site with Hugo
 theme = "hugo-theme-learn"
-BaseURL = "https://nonotnonez.github.io"
+BaseURL = "https://nonotnonez.github.io/ws-0001"
 
 # For search functionality
 [outputs]
